Deleted practise navbar and added script

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,7 @@
+// Bootstrap variable Override
 @import "variables";
+
+// Bootstrap Style
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+// original style
