--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,18 +1,18 @@
 // scss-docs-start color-variables
-$blue: #0d6efd !default;
-$indigo: #6610f2 !default;
-$purple: #6f42c1 !default;
-$pink: #d63384 !default;
-$red: #dc3545 !default;
-$orange: #fd7e14 !default;
-$yellow: #ffc107 !default;
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
 $green: #cccad7;
-$teal: #20c997 !default;
-$cyan: #0dcaf0 !default;
+$teal: #20c997;
+$cyan: #0dcaf0;
 // scss-docs-end color-variables
 
 // scss-docs-start spacer-variables-maps
-$spacer: 1rem !default;
+$spacer: 1rem;
 $spacers: (
   0: 0,
   1: $spacer * 0.25,
@@ -20,5 +20,5 @@ $spacers: (
   3: $spacer,
   4: $spacer * 1.5,
   5: $spacer * 3,
-) !default;
+);
 // scss-docs-end spacer-variables-maps
