created variables scss file and changed color

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,7 @@ $pink: #d63384;
 $red: #dc3545;
 $orange: #fd7e14;
 $yellow: #ffc107;
-$green: #cccad7;
+$green: #2d8554;
 $teal: #20c997;
 $cyan: #0dcaf0;
 // scss-docs-end color-variables
@@ -19,6 +19,6 @@ $spacers: (
   2: $spacer * 0.5,
   3: $spacer,
   4: $spacer * 1.5,
-  5: $spacer * 3,
+  5: $spacer * 5,
 );
 // scss-docs-end spacer-variables-maps
