--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,9 @@ $yellow: #ffc107;
 $green: #2d8554;
 $teal: #20c997;
 $cyan: #0dcaf0;
+
+// Color
+
 // scss-docs-end color-variables
 
 // scss-docs-start spacer-variables-maps
@@ -22,3 +25,95 @@ $spacers: (
   5: $spacer * 5,
 );
 // scss-docs-end spacer-variables-maps
+
+// Color system
+
+// scss-docs-start gray-color-variables
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #7a8086;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000;
+// scss-docs-end gray-color-variables
+
+// fusv-disable
+// scss-docs-start gray-colors-map
+$grays: (
+  "100": $gray-100,
+  "200": $gray-200,
+  "300": $gray-300,
+  "400": $gray-400,
+  "500": $gray-500,
+  "600": $gray-600,
+  "700": $gray-700,
+  "800": $gray-800,
+  "900": $gray-900,
+);
+// scss-docs-end gray-colors-map
+
+// Customised color pallete and override bootstraps
+
+$new-purple: #6237b3;
+$new-red: #cc2839;
+$new-yellow: #eeba1e;
+$text-muted: $gray-600;
+
+// BOOTSTRAPS
+
+// scss-docs-start theme-color-variables
+$primary: $new-purple;
+$secondary: $gray-600 !default;
+$success: $green !default;
+$info: $cyan !default;
+$warning: $new-yellow;
+$danger: $new-red;
+$light: $gray-100 !default;
+$dark: $gray-900 !default;
+// scss-docs-end theme-color-variables
+
+// scss-docs-start theme-colors-map
+$theme-colors: (
+  "primary": $primary,
+  "secondary": $secondary,
+  "success": $success,
+  "info": $info,
+  "warning": $warning,
+  "danger": $danger,
+  "light": $light,
+  "dark": $dark,
+) !default;
+// scss-docs-end theme-colors-map
+
+// Break point
+
+// scss-docs-start grid-breakpoints
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 680px,
+  // md: 768px,
+  // lg: 992px,
+  lg: 862px,
+
+  xl: 1200px,
+  xxl: 1400px,
+);
+// scss-docs-end grid-breakpoints
+
+// scss-docs-start container-max-widths
+$container-max-widths: (
+  sm: 540px,
+  md: 640px,
+  // md: 720px,
+  // lg: 960px,
+  lg: 840px,
+  xl: 1140px,
+  xxl: 1320px,
+);
+// scss-docs-end container-max-widths
