--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,14 +6,14 @@
 
 // original style
 
-.fs-0 {
-  font: size 4rem;
-}
+// .fs-0 {
+//   font: size 4rem;
+// }
 
-.fs-7 {
-  font-size: 0.8rem;
-}
+// .fs-7 {
+//   font-size: 0.8rem;
+// }
 
-.bg-gray {
-  background-color: #f0f2f5;
-}
+// .bg-gray {
+//   background-color: #f0f2f5;
+// }
