--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,7 +22,7 @@ $spacers: (
   2: $spacer * 0.5,
   3: $spacer,
   4: $spacer * 1.5,
-  5: $spacer * 5,
+  5: $spacer * 5.6,
 );
 // scss-docs-end spacer-variables-maps
 
@@ -68,13 +68,13 @@ $text-muted: $gray-600;
 
 // scss-docs-start theme-color-variables
 $primary: $new-purple;
-$secondary: $gray-600 !default;
-$success: $green !default;
-$info: $cyan !default;
+$secondary: $gray-600;
+$success: $green;
+$info: $cyan;
 $warning: $new-yellow;
 $danger: $new-red;
-$light: $gray-100 !default;
-$dark: $gray-900 !default;
+$light: $gray-100;
+$dark: $gray-900;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -92,28 +92,21 @@ $theme-colors: (
 
 // Break point
 
-// scss-docs-start grid-breakpoints
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
-  md: 680px,
-  // md: 768px,
-  // lg: 992px,
-  lg: 862px,
-
-  xl: 1200px,
+  md: 850px,
+  lg: 1160px,
+  xl: 1240px,
   xxl: 1400px,
 );
-// scss-docs-end grid-breakpoints
 
 // scss-docs-start container-max-widths
 $container-max-widths: (
   sm: 540px,
-  md: 640px,
-  // md: 720px,
-  // lg: 960px,
-  lg: 840px,
-  xl: 1140px,
-  xxl: 1320px,
+  md: 818px,
+  lg: 1128px,
+  xl: 1208px,
+  xxl: 1340px,
 );
 // scss-docs-end container-max-widths
